Fixes after merge