@@ -5,9 +5,9 @@ import com.yanny.ali.plugin.common.nodes.LootTableNode;
 import com.yanny.ali.plugin.server.GenericTooltipUtils;
 import net.minecraft.core.Holder;
 import net.minecraft.core.registries.BuiltInRegistries;
-import net.minecraft.network.FriendlyByteBuf;
+import net.minecraft.network.RegistryFriendlyByteBuf;
 import net.minecraft.network.chat.Component;
-import net.minecraft.network.chat.ComponentContents;
+import net.minecraft.network.chat.contents.PlainTextContents;
 import net.minecraft.world.item.Item;
 import net.minecraft.world.item.ItemStack;
 import net.minecraft.world.level.storage.loot.entries.AlternativesEntry;
@@ -23,7 +23,7 @@ import java.util.function.Predicate;
 import java.util.stream.Stream;
 
 public class NodeUtils {
-    public static void encodeTooltipNodes(IServerUtils ignoredUtils, FriendlyByteBuf buf, List<ITooltipNode> nodes) {
+    public static void encodeTooltipNodes(IServerUtils ignoredUtils, RegistryFriendlyByteBuf buf, List<ITooltipNode> nodes) {
         buf.writeInt(nodes.size());
 
         for (ITooltipNode node : nodes) {
@@ -32,7 +32,7 @@ public class NodeUtils {
     }
 
     @NotNull
-    public static List<ITooltipNode> decodeTooltipNodes(IClientUtils ignoredUtils, FriendlyByteBuf buf) {
+    public static List<ITooltipNode> decodeTooltipNodes(IClientUtils ignoredUtils, RegistryFriendlyByteBuf buf) {
         int count = buf.readInt();
         List<ITooltipNode> nodes = new ArrayList<>(count);
 
@@ -76,7 +76,7 @@ public class NodeUtils {
     public static List<Component> toComponents(ITooltipNode tooltip, int pad) {
         List<Component> components = new ArrayList<>();
 
-        if (tooltip.getContent().getContents() != ComponentContents.EMPTY) {
+        if (tooltip.getContent().getContents() != PlainTextContents.EMPTY) {
             components.add(GenericTooltipUtils.pad(pad, tooltip.getContent()));
             components.addAll(toComponents(tooltip.getChildren(), pad + 1));
         } else {
@@ -92,10 +92,10 @@ public class NodeUtils {
         for (IOperation operation : operations) {
             if (operation instanceof IOperation.AddOperation addOperation) {
                 node.addChildren(addOperation.node());
-            } else if (operation instanceof IOperation.RemoveOperation removeOperation) {
-                removeItem(node, removeOperation.predicate());
-            } else if (operation instanceof IOperation.ReplaceOperation replaceOperation) {
-                replaceItem(utils, node, replaceOperation.factory(), replaceOperation.predicate());
+            } else if (operation instanceof IOperation.RemoveOperation(Predicate<ItemStack> predicate)) {
+                removeItem(node, predicate);
+            } else if (operation instanceof IOperation.ReplaceOperation(Predicate<ItemStack> predicate, Function<IDataNode, List<IDataNode>> factory)) {
+                replaceItem(utils, node, factory, predicate);
             }
         }
     }
@@ -127,7 +127,7 @@ public class NodeUtils {
                         nodes.addAll(result.subList(1, result.size()));
                     }
 
-                    return result.get(0);
+                    return result.getFirst();
                 } else if (n instanceof ListNode l) {
                     replaceItem(utils, l, factory, predicate);
                 }
